--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
 		"@sveltejs/adapter-static": "2.0.3",
 		"@sveltejs/kit": "1.25.0",
 		"@types/dompurify": "^3.0.2",
+		"@types/gtag.js": "^0.0.20",
 		"@types/marked": "^5.0.0",
 		"@types/prismjs": "^1.26.0",
 		"@typescript-eslint/eslint-plugin": "^5.45.0",
